clusters/main/kubernetes/apps/vscode/app/authentik-outpost-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-outpost
  namespace: vscode
spec:
  type: ExternalName
  externalName: authentik-http.authentik.svc.cluster.local
  ports:
    - name: http
      port: 10230
      targetPort: 10230
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-outpost
  namespace: vscode
spec:
  ingressClassName: internal
  rules:
    - host: code.${DOMAIN_0}
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: ImplementationSpecific
            backend:
              service:
                name: authentik-outpost
                port:
                  number: 10230
